--- a/4170_MatPlotLibDashboard_DebartoloAlexandra.ipynb
+++ b/4170_MatPlotLibDashboard_DebartoloAlexandra.ipynb
@@ -20,9 +20,7 @@
         "id": "fYlYA6h9TTfF"
       },
       "source": [
-        "#### Alexandra Debartolo\n",
-        "#### Data Visualization CIS 4170 UMA[12876]\n",
-        "#### MatPlotLib Dashboard - Due on Tue, May 25"
+        "#### Alexandra Debartolo - MatPlotLib Dashboard" \n"
       ]
     },
     {
