--- a/OpenWeatherMap_API_Project.ipynb
+++ b/OpenWeatherMap_API_Project.ipynb
@@ -262,7 +262,7 @@
       },
       "source": [
         "#enter api key for OpenWeatherMap\n",
-        "api_key = \"X\"\n",
+        "api_key = \"\"\n",
         "\n",
         "#base url = \"http://api.openweathermap.org/data/2.5/weather?\"\n",
         "\n",
