Update and rename OpenWeatherMap_API_Project.ipynb to OpenWeatherMap_API.ipynb

--- a/OpenWeatherMap_API.ipynb
+++ b/OpenWeatherMap_API.ipynb
@@ -20,7 +20,7 @@
       },
       "source": [
         "####**Project Description:** \n",
-        "This python program finds the current weather data of the most populated cities in the United States using city names from Wikipedia and data from the OpenWeatherMap API. It visualizes how a city's latitude affects different weather properties."
+        "This program finds the current weather data of the most populated cities in the United States using the OpenWeatherMap API. It visualizes how a city's latitude affects different weather properties."
       ]
     },
     {
