--- a/OpenWeatherMap_API.ipynb
+++ b/OpenWeatherMap_API.ipynb
@@ -1085,6 +1085,10 @@
               "    }\n",
               "  "
             ],
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
           "metadata": {
             "tags": []
           }
@@ -1095,6 +1099,10 @@
             "application/javascript": [
               "download(\"download_ac6e57b7-23da-4f1d-8db6-ba70e0283d46\", \"US Cities and their Weather Data.csv\", 2990)"
             ],
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
           "metadata": {
             "tags": []
           }
