--- a/Women's_E_Commerce_Clothing_Reviews.ipynb
+++ b/Women's_E_Commerce_Clothing_Reviews.ipynb
@@ -25,6 +25,7 @@
       "source": [
         "### **Women's E-Commerce Clothing Reviews**\n",
         "\n",
+        "Dataset: https://www.kaggle.com/gourabroy553/women-s-e-commerce-clothing-reviews\n",
         "\n",
         "\n",
         "\n",
